# Generacion-automatica-de-tablas-SQL

./: Data_Types.md  LICENSE.txt  README.md  constantes.py  main.py  main2.py  requirements.txt  setup.cfg
docs/: Caracteristicas.md  Data_Types.md  Exceptions.md  Limitations.md  Pruebas_Select.md  ToDo.md  exceptions.md  limitations.md
src/: __init__.py  clasificador.py  constantes.py  exceptionsDef.py  generador_datos.py  main.py  poblador.py
tests/: generator.py
