[metadata]
#name = generacion_automatica_tablas_SQL
#version = 0.0
#license = <license name, e.g. MIT>
description = Generación automática de tablas para probar consultas SQL
long_description = file: README.rst
author = Maria de Lluc Bonet Seguí, Álvaro Plaza Sanz
#author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 1 - Planning
   Intended Audience :: Education
   License :: OSI Approved :: MIT License
   Natural Language :: Spanish
   Programming Language :: Python
   Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src